Changing The Skip Message In The End Slide

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-slides pager>
+  <ion-slides pager (ionSlideDidChange)="slideChanged()" >
 
     <ion-slide>
       <div class="diag" style="background: url('assets/img/whitebg.svg') no-repeat">
