--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,11 +1,11 @@
 <ion-content>
-  <ion-slides pager (ionSlideDidChange)="slideChanged()" >
+  <ion-slides pager (ionSlideDidChange)="slideChanged()" (ionSlideDrag)="slideMoved()">
 
     <ion-slide>
       <div class="diag" style="background: url('assets/img/whitebg.svg') no-repeat">
-        <ion-icon ios="ios-analytics" md="md-analytics" color="primary"></ion-icon>
+        <ion-icon ios="ios-analytics" md="md-analytics" color="primary" [@bounce]='state' (@bounce.done)="animationDone($event)"></ion-icon>
       </div>
-      <div>
+      <div [@bounce]='state' >
         <h2>track your routine</h2>
         <p>whether it's sets, reps, weight used, you can track it all with our intuitive interface.</p>
       </div>
@@ -13,9 +13,9 @@
 
     <ion-slide>
       <div class="diag" style="background: url('assets/img/whitebg.svg') no-repeat">
-        <ion-icon ios="ios-trophy" md="md-trophy" color="primary"></ion-icon>
+        <ion-icon ios="ios-trophy" md="md-trophy" color="primary" [@bounce]='state'></ion-icon>
       </div>
-      <div>
+      <div [@bounce]='state'>
         <h2>set personal goals</h2>
         <p>we're all in the gym for a reason: goals. set goals for diet and fitness.</p>
       </div>
@@ -23,9 +23,9 @@
 
     <ion-slide>
       <div class="diag" style="background: url('assets/img/whitebg.svg') no-repeat">
-        <ion-icon ios="ios-chatboxes" md="md-chatboxes" color="primary"></ion-icon>
+        <ion-icon ios="ios-chatboxes" md="md-chatboxes" color="primary" [@bounce]='state'></ion-icon>
       </div>
-      <div>
+      <div [@bounce]='state' >
         <h2>chat with others</h2>
         <p>inspire and help each other reach fitness and diet goals.</p>
       </div>
